# devoir_2_lenoir_dong

./: README.md  calcul_energ.py  calcul_energ_data.txt  construction_ham.py  epsilon_alg.py  extrapolation.py  pyproject.toml  verif_epsilon.py
