[tool.poetry]
name = "devoir-2-lenoir-dong"
version = "0.1.0"
description = ""
authors = ["theolenoir12 <theo.lenoir4@orange.fr>"]
readme = "README.md"
packages = [{include = "devoir_2_lenoir_dong"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
scipy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
